--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 								<header>
 									<div class="title" style="display: flex; align-items: center;">
 									  <h2 style="margin: 0; margin-right: 300px;">Hello!</h2>
-									  <ul class="icons" style="list-style: none; margin: 0; padding: 0; display: flex; align-items: center;">
+									  <ul class="icons" style="list-style: none; margin: 100px; padding: 0; display: flex; align-items: center;">
+										<li><a href="https://scholar.google.com/citations?user=dyVvGfUAAAAJ&hl=en" target="blank">Google Scholar</a></li>
 									    <li><a href="https://github.com/gretab5802" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 									    <li><a href="https://www.linkedin.com/in/greta-brown-8b5351291" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-										<li><a href="https://scholar.google.com/citations?user=dyVvGfUAAAAJ&hl=en" target="blank">Google Scholar</a></li>
 									    <li><a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=brow6802@umn.edu&tf=1" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
 									  </ul>
 									</div>
@@ -193,10 +193,11 @@
 						<!-- Footer -->
 							<section id="footer">
 								<ul class="icons" style="list-style: none; margin: 0; padding: 0; display: flex; align-items: center;">
+									<li><a href="https://scholar.google.com/citations?user=dyVvGfUAAAAJ&hl=en" target="_blank">Google Scholar</a></li>
 								    <li><a href="https://github.com/gretab5802" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 								    <li><a href="https://www.linkedin.com/in/greta-brown-8b5351291" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://scholar.google.com/citations?user=dyVvGfUAAAAJ&hl=en" target="_blank">Google Scholar</a></li>
 									<li><a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=brow6802@umn.edu&tf=1" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+
 									
 								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
 							</section>
@@ -616,4 +617,5 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
