--- a/index.html
+++ b/index.html
@@ -40,23 +40,25 @@
 									  </ul>
 									</div>
 								</header>
-								<p>Welcome to my personal website! I am a passionate computer science student at the University of Minnesota,
-									Twin Cities. Here, you'll find information about my education, skills, projects, and more. I am
-									currently an Undergraduate Teaching Assistant for Introduction to Artificial Intelligence and am an
-									Undergraduate Research Assistant in the <a href="https://nextgenai.umn.edu/" target="_blank">Next Generation Robotics Laboratory</a>
-									with a specialization in <a href="https://nextgenai.umn.edu/multi-agent-group" target="_blank">Multi-Agent robot systems</a>.
-									My interests lie in robotics, artificial intelligence, and embedded systems. Feel free to explore my
-									work and connect with me!</p>
+								<p>Welcome to my personal website! I am an M.S. in Computer Science student at the University of Minnesota, Twin Cities.
+									Here, you'll find information about my education, skills, projects, and more. I have previous experience
+									as an Undergraduate Research Assistant in the <a href="https://nextgenai.umn.edu/multi-agent-group/" target="_blank">Next Generation Robotics Laboratory</a>
+									at the University of Minnesota. I am currently a Planetary Sampling Automation Development Intern at NASA Ames Research Center.</p>
 								<h3>Education</h3>
 								<p><b>University of Minnesota, Twin Cities Minneapolis, MN</b><br>
-									College of Science and Engineering, Bachelor of Computer Science<br>
-									Expected May 2026<br>
+									College of Science and Engineering, B.S. in Computer Science<br>
+									September 2022 - December 2025<br>
 									GPA: 3.821<br><br>
 								
 								<b>University College Dublin</b><br>
 									Big Ten STEM and Irish History Dublin, Ireland<br>
 									May 2023 – July 2023<br>
-									Collaborated with peers in Physics II and Ireland History over a 7-week study abroad summer term</p>
+									Collaborated with peers in Physics II and Ireland History over a 7-week study abroad summer term</p
+
+								<p><b>University of Minnesota, Twin Cities Minneapolis, MN</b><br>
+									College of Science and Engineering, M.S. in Computer Science<br>
+									Expected December 2026<br><br>
+									
 								<h3>Skills</h3>
 								<p>C/C++, Python, Java, OCaml, R, MatLab, HTML, CSS, JavaScript, Git, Arduino,
 									Raspberry Pi, ROS/ROS2, Linux, Public Speaking</p>
@@ -617,5 +619,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
