--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 								<header>
 									<div class="title" style="display: flex; align-items: center;">
 									  <h2 style="margin: 0; margin-right: 300px;">Hello!</h2>
-									  <ul class="icons" style="list-style: none; margin: 100px; padding: 0; display: flex; align-items: center;">
+									  <ul class="icons" style="list-style: none; margin: 400px; padding: 0; display: flex; align-items: center;">
 										<li><a href="https://scholar.google.com/citations?user=dyVvGfUAAAAJ&hl=en" target="blank">Google Scholar</a></li>
 									    <li><a href="https://github.com/gretab5802" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 									    <li><a href="https://www.linkedin.com/in/greta-brown-8b5351291" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
@@ -528,9 +528,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</a>
 								<header>
 									<h2>Greta Brown</h2>
-									<p>Undergraduate CS Student |<br>
-										Research Assistant |<br>
-										Teaching Assistant</p>
+									<p>M.S. CS Student|<br>
+										Research Assistant</p>
 								</header>
 							</section>
 
@@ -619,6 +618,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
