--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</a>
 								<header>
 									<h2>Greta Brown</h2>
-									<p>M.S. CS Student|<br>
+									<p>M.S. CS Student<br>
 										Research Assistant</p>
 								</header>
 							</section>
@@ -618,6 +618,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
 
 
 
